--- a/ts/package.json
+++ b/ts/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "vue": "^3.3.4"
   },
